charts/nginx-proxy/templated.yaml
---
# Source: static-site/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-auth
spec:
  selector:
    name: nginx-auth
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
# Source: static-site/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-auth 
  labels:
    name: nginx-auth 
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-auth 
  template:
    metadata:
      labels:
        name: nginx-auth 
    spec:
      containers:
        - name: nginx-auth 
          image: "nginx:latest"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          resources:
            requests:
              memory: 128Mi
              cpu: 128m
            limits:
              memory: 512Mi
              cpu: 512m

          ports:
          # ADDING VOLUMES
          volumeMounts:
            # adding shared auth
            - name: shared
              mountPath: /auth
            # add generated nginx config files inside pod
            - name: grafana
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: shared
          emptyDir: {}
        # add generated nginx config files
        - name: grafana
          configMap:
            name: grafana
---
# Source: static-site/templates/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-VirtualService
  namespace: istio-ingress
spec:
  hosts:
    # Generates: grafana.example.com
    - "grafana.example.com"
  gateways:
    - "my-gateway"
  http:
    - route:
        - destination:
            # Points to your single Nginx Service
            host: "grafana.default.svc.cluster.local"
            port:
              number: 3000
